objects/Pharmacy_Upsell_Details__c.object
<CustomObject>
    <fields>
        <fullName>Split_fill_Benefit_Recommended__c</fullName>
        <label>Split-fill  Benefit Recommended</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_fill_Current_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Split-fill Current Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_Therapy_Current_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step Therapy Current Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Step_Therapy_Reason_for_Denial__c</fullName>
        <label>Step Therapy Reason for Denial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Union group</fullName>
                </value>
                <value>
                    <fullName>Had program and removed</fullName>
                </value>
                <value>
                    <fullName>Not a cultural fit</fullName>
                </value>
                <value>
                    <fullName>Low savings</fullName>
                </value>
                <value>
                    <fullName>Not allowed to present</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pharmacy Benefit Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pharmacy Benefit Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharmacy Benefit Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>